栏目视频图标样式修正

--- a/app/views/welcome/channel.html.erb
+++ b/app/views/welcome/channel.html.erb
@@ -3,8 +3,8 @@
   <div class="grid">
     <div class="programa">
       <div class="side">
-        <p><img src="<%= image_url('toutu/videos.png') %>" style="width: 20px;height: 16px;padding-bottom: 5px"></span>
-          <%= @videos.total_entries %> 个视频</p>
+        <span><img src="<%= image_url('toutu/videos.png') %>" style="width: 30px;height: 27px;padding-bottom: 2px"></span>
+          <%= @videos.total_entries %> 个视频</span>
       </div>
       <div class="programa-list">
         <ul>
