--- a/app/views/administer/columns/edit.html.erb
+++ b/app/views/administer/columns/edit.html.erb
@@ -1,5 +1,5 @@
 
-<%= content_for(:title,  '编辑栏目「' + @column.name + '」| 车干') %>
+<%= content_for(:title,  '编辑栏目「' + @column.name + '」| Koogle') %>
 <section class="content-header">
   <h1>
     编辑栏目
