--- a/app/views/administer/seven_cattle/index.html.erb
+++ b/app/views/administer/seven_cattle/index.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title,  ' 文件云存储 | 车干') %>
+<%= content_for(:title,  ' 文件云存储 | Koogle') %>
 <section class="content-header">
   <h1>
     七牛云存储
