--- a/app/views/administer/seven_cattle/new.html.erb
+++ b/app/views/administer/seven_cattle/new.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title,  '上传文件 | 车干') %>
+<%= content_for(:title,  '上传云文件 | Koogle') %>
 <section class="content-header">
   <h1>
     七牛云存储 <small>文件上传</small>
