--- a/app/views/administer/videos/edit.html.erb
+++ b/app/views/administer/videos/edit.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title,  ' 编辑' + @video.title + ' | 车干') %>
+<%= content_for(:title,  ' 编辑' + @video.title + ' | Koogle') %>
 <section class="content-header">
   <h1>
     编辑视频
