--- a/app/views/layouts/just_front.html.erb
+++ b/app/views/layouts/just_front.html.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="">
 <head>
-  <title><%= content_for?(:title) ? yield(:title) : '在沉默中爆发 | 车干' %></title>
+  <title><%= content_for?(:title) ? yield(:title) : '在沉默中爆发 | Koogle' %></title>
   <meta charset="utf-8">
   <!-- 响应式布局 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
