--- a/app/views/administer/dashboard/search.html.erb
+++ b/app/views/administer/dashboard/search.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title, '搜索' +params[:query] + ' | 车干') %>
+<%= content_for(:title, '搜索' +params[:query] + ' | Koogle') %>
 <section class="content-header">
   <h1>
     「搜索关键字」
