--- a/app/views/administer/videos/new.html.erb
+++ b/app/views/administer/videos/new.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title,  ' 添加' + @column.name + '视频 | 车干') %>
+<%= content_for(:title,  ' 添加' + @column.name + '视频 | Koogle') %>
 <section class="content-header">
   <h1>
     添加视频
