--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= content_for?(:title) ? yield(:title) : '暗夜TV | 用户中心' %></title>
+  <title><%= content_for?(:title) ? yield(:title) : '用户中心 | Koogle' %></title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <%= stylesheet_link_tag 'just_user', media: 'all', 'data-turbolinks-track' => true %>
