--- a/app/views/users/profile/new_avatar.html.erb
+++ b/app/views/users/profile/new_avatar.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= content_for?(:title) ? yield(:title) : '上传头像 | 车干' %></title>
+  <title><%= content_for?(:title) ? yield(:title) : '上传头像 | Koogle' %></title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <!-- 响应式布局 -->
