--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title,  '新用户注册 | 车干') %>
+<%= content_for(:title,  '新用户注册 | Koogle') %>
 <%=javascript_include_tag 'http://api.geetest.com/get.php' %>
 <div class="main">
   <div class="main-login">
