--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:title, '在沉默中爆发 | 车干') %>
+<%= content_for(:title, '在沉默中爆发 | Koogle') %>
 <%= render :partial=> 'shared/carousel_picture' %>
 <div class="container">
   <div class="grid">
