--- a/app/views/layouts/ltes/_right_menu_skin.html.erb
+++ b/app/views/layouts/ltes/_right_menu_skin.html.erb
@@ -164,6 +164,6 @@
 <script type="text/javascript">
     function SelectSkin(skin){
         $('#body-skin').attr('class',skin);
-        $.get('/admin/style_option?style=' + skin ,function(data,status){});
+        $.get('/zhang/set_skin?skin=' + skin ,function(data,status){});
     }
 </script>
