添加图片及用户地址信息

--- a/app/views/administer/columns/index.html.erb
+++ b/app/views/administer/columns/index.html.erb
@@ -32,7 +32,7 @@
             <% @columns.each do |channel| %>
               <tr style="text-align: center">
                 <td>
-                  <img src="<%= channel.cover %>" style="height: 140px">
+                  <img src="<%= list_cover channel.cover %>">
                 </td>
                 <td style="text-align: left"><br>
                   <label class="label label-primary" style="font-size: 16px">
