--- a/app/views/administer/dashboard/users.html.erb
+++ b/app/views/administer/dashboard/users.html.erb
@@ -66,7 +66,7 @@
                       <br>
                       <span class="label label-primary" style="font-size: 16px">
                         <i class="fa fa-map-marker"></i>
-                        <%= baidu_ip_info user %>
+                        <%= user.location %>
                       </span>
                       <br><br>
                       <span class="label label-success" style="font-size: 16px">
