--- a/app/views/administer/videos/_form.html.erb
+++ b/app/views/administer/videos/_form.html.erb
@@ -24,7 +24,7 @@
           <div class="input-group-addon">
             <i class="fa fa-image"></i>
           </div>
-          <%= f.file_field :photo_file, class:'form-control', accept:'.jpg,.png,.jpeg' %>
+          <%= f.file_field :photo_file, class:'form-control', accept:'.jpg,.png,.jpeg,.gif' %>
         </div>
         <div id="imgdiv" style="display: none">
           <img id="imgblah" style="max-width: 300px;padding-top: 10px"/>
