--- a/app/views/administer/dashboard/channel.html.erb
+++ b/app/views/administer/dashboard/channel.html.erb
@@ -33,9 +33,9 @@
             <% cache [params[:english], @videos.map{|c| c.updated_at}.max] do %>
                 <% @videos.each do |video| %>
                     <tr style="text-align: center">
-                      <td>
+                      <td style="width:300px">
                         <a href="<%= video_playing_path(video.tv_code)%>" target="_blank">
-                          <img src="<%= video.cover %>" style="height:140px">
+                          <img src="<%= list_cover video.cover %>">
                         </a>
                       </td>
                       <td style="text-align: left"><br>
