--- a/app/views/administer/seven_cattle/index.html.erb
+++ b/app/views/administer/seven_cattle/index.html.erb
@@ -44,11 +44,11 @@
             <tbody>
             <% cache [:file, @next_page, Base64.strict_encode64(@files.map{|file| file['key'] }.join(','))] do%>
               <% @files.each do |file| %>
-                <tr style="text-align: center">
+                <tr>
                   <td style="text-align: left">
                     <a href="<%= Settings.qiniu_cdn_host + file['key'] %>" target="_blank">
                       <% if file['mimeType'].include?('image') %>
-                          <img src="<%= Settings.qiniu_cdn_host + file['key'] %>" style="height: 120px">
+                          <img src="<%= Settings.qiniu_cdn_host + file['key'] + '!200x100' %>">
                       <% elsif file['mimeType'].include?('video') %>
                           <img src="<%= image_url('toutu/video.png') %>" style="height: 120px">
                       <% else %>
@@ -56,7 +56,7 @@
                       <% end %>
                     </a>
                   </td>
-                  <td style="text-align:left;width: 50px"><br><br>
+                  <td style="text-align:left"><br><br>
                       <%= file['key']%>
                   </td>
                   <td style="text-align:left;">
