--- a/app/views/shared/_carousel_picture.html.erb
+++ b/app/views/shared/_carousel_picture.html.erb
@@ -6,12 +6,12 @@
             <% @channel.each do |column|%>
                 <% if column.updated_at == @channel.first.updated_at %>
                     <li data-delay="5" data-src="5" data-trans3d="tr6,tr17,tr22,tr23,tr29,tr27,tr32,tr34,tr35,tr53,tr54,tr62,tr63,tr4,tr13,tr45" data-trans2d="tr3,tr8,tr12,tr19,tr22,tr25,tr27,tr29,tr31,tr34,tr35,tr38,tr39,tr41">
-                      <img src="<%= column.cover %>" data-src="<%= column.cover %>" data-thumb="<%= image_path('toutu/just_logo.png') %>"/>
+                      <img src="<%= carousel_cover(column.cover) %>" data-src="<%= carousel_cover(column.cover) %>" data-thumb="<%= carousel_avatar_cover(column.cover) %>"/>
                       <a data-type="link" href="<%= column_video_or_recommend column.id %>" target="_blank"></a>
                     </li>
                 <% else %>
                     <li data-delay="5" data-src="5" data-trans3d="tr6,tr17,tr22,tr23,tr29,tr27,tr32,tr34,tr35,tr53,tr54,tr62,tr63,tr4,tr13,tr45" data-trans2d="tr3,tr8,tr12,tr19,tr22,tr25,tr27,tr29,tr31,tr34,tr35,tr38,tr39,tr41">
-                      <img src="<%= image_path('slider/blank.png') %>" data-src="<%= column.cover %>" data-thumb="<%= image_path('toutu/just_logo.png') %>"/>
+                      <img src="<%= image_path('slider/blank.png') %>" data-src="<%= carousel_cover(column.cover) %>" data-thumb="<%= carousel_avatar_cover(column.cover) %>"/>
                       <a data-type="link" href="<%= column_video_or_recommend column.id %>" target="_blank"></a>
                     </li>
                 <% end %>
