--- a/app/views/welcome/interim.html.erb
+++ b/app/views/welcome/interim.html.erb
@@ -1,5 +1,5 @@
 <%= content_for(:title, symbol_truncate(@video['title']) + ' | Koogle') %>
-<%= javascript_include_tag '//7xjfim.com2.z0.glb.qiniucdn.com/Iva.js' %>
+<%= javascript_include_tag 'video_player' %>
 <div class="container">
   <div class="grid">
     <div class="display">
