--- a/app/views/layouts/just_front.html.erb
+++ b/app/views/layouts/just_front.html.erb
@@ -81,8 +81,11 @@
   <%= yield %>
 </div>
 <footer class="footer">
- <%= render :partial => 'layouts/footer' %>
+  <%= render :partial => 'layouts/footer' %>
 </footer>
+<div class="footer-menu">
+  <%= render :partial => 'layouts/footer_menu' %>
+</div>
 </body>
 </html>
 <script>
