--- a/app/views/welcome/channel.html.erb
+++ b/app/views/welcome/channel.html.erb
@@ -34,6 +34,7 @@
         <h4>MORE 「 <%= @videos.total_entries - 9 > 0 ? @videos.total_entries - 9:'+ _ +'%> 」</h4>
       </a>
     </div>
+    <div class="load-more-menu"></div>
   </div>
 </div>
 <script>
@@ -62,7 +63,6 @@
 
   $(window).scroll(function(){
     if($(document).height() - $(window).scrollTop() == $(window).height()){
-      //setTimeout("$('.load-more').click()",2000);
       $('.load-more').click();
     }
   });
