--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -58,9 +58,9 @@
     })
   }
 
-  // $(window).scroll(function(){
-  //   if($(document).height() - $(window).scrollTop() == $(window).height()){
-  //     $('.load-more').click();
-  //   }
-  // });
+  $(window).scroll(function(){
+    if($(document).height() - $(window).scrollTop() == $(window).height()){
+      $('.load-more').click();
+    }
+  });
 </script>
